force-app/main/default/objects/Duplicate_Prospect__c/Duplicate_Prospect__c.object-meta.xml
<CustomObject>
    <label>Duplicate Prospect</label>
    <nameField>
        <displayFormat>DUP-{000000}</displayFormat>
        <label>DUP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Prospects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>