force-app/main/default/objects/Duplicate_Prospect__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <formula>Prospect_1__r.Id +&apos;-&apos;+ Prospect_2__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index</label>
    <type>Text</type>
</CustomField>