force-app/main/default/objects/Duplicate_Prospect__c/fields/Is_Reciprocal__c.field-meta.xml
<CustomField>
    <fullName>Is_Reciprocal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reciprocal</label>
    <type>Checkbox</type>
</CustomField>