force-app/main/default/objects/Duplicate_Prospect__c/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <label>Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email and Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>