force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_1__c.field-meta.xml
<CustomField>
    <fullName>Prospect_1__c</fullName>
    <label>Prospect 1</label>
    <referenceTo>ESC_NBC_Prospect__c</referenceTo>
    <relationshipLabel>Duplicate Prospects</relationshipLabel>
    <relationshipName>Duplicate_Prospects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>