force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_1_Address__c.field-meta.xml
<CustomField>
    <fullName>Prospect_1_Address__c</fullName>
    <formula>/* Street */

Prospect_1__r.ESC_NBC_Address__Street__s 
/* + “, City” if City exists */
&amp; IF(
    NOT( ISBLANK( Prospect_1__r.ESC_NBC_Address__City__s ) ),
    &quot;, &quot; &amp; Prospect_1__r.ESC_NBC_Address__City__s,
    &quot;&quot;
)
/* + “, State ZIP” if State exists */
&amp; IF(
NOT( ISBLANK( TEXT( Prospect_1__r.ESC_NBC_Address__StateCode__s ) ) ),
    &quot;, &quot; 
      &amp; TEXT( Prospect_1__r.ESC_NBC_Address__StateCode__s )
      &amp; &quot; &quot; 
      &amp; Prospect_1__r.ESC_NBC_Address__PostalCode__s,
    &quot;&quot;
)</formula>
    <label>Prospect 1 Address</label>
    <type>Text</type>
</CustomField>