force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Prospect_1_Email__c</fullName>
    <formula>Prospect_1__r.ESC_NBC_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect 1 Email</label>
    <type>Text</type>
</CustomField>