force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_1_Name__c</fullName>
    <formula>Prospect_1__r.ESC_NBC_First_Name__c +&apos; &apos;+ Prospect_1__r.ESC_NBC_Last_Name__c</formula>
    <label>Prospect 1 Name</label>
    <type>Text</type>
</CustomField>