force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_1_Owner__c.field-meta.xml
<CustomField>
    <fullName>Prospect_1_Owner__c</fullName>
    <formula>Prospect_1__r.Owner:User.FirstName +&apos; &apos;+ Prospect_1__r.Owner:User.LastName</formula>
    <label>Prospect 1 Owner</label>
    <type>Text</type>
</CustomField>