force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Prospect_1_Phone__c</fullName>
    <formula>Prospect_1__r.ESC_NBC_Phone__c</formula>
    <label>Prospect 1 Phone</label>
    <type>Text</type>
</CustomField>