force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_2__c.field-meta.xml
<CustomField>
    <fullName>Prospect_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect 2</label>
    <referenceTo>ESC_NBC_Prospect__c</referenceTo>
    <relationshipLabel>Duplicate Prospects (Prospect 2)</relationshipLabel>
    <relationshipName>Duplicate_Prospects2</relationshipName>
    <type>Lookup</type>
</CustomField>