force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_2_Address__c.field-meta.xml
<CustomField>
    <fullName>Prospect_2_Address__c</fullName>
    <formula>/* Street */
Prospect_2__r.ESC_NBC_Address__Street__s
/* + “, City” if City exists */
&amp; IF(
    NOT( ISBLANK( Prospect_2__r.ESC_NBC_Address__City__s ) ),
    &quot;, &quot; &amp; Prospect_2__r.ESC_NBC_Address__City__s,
    &quot;&quot;
)
/* + “, StateCode ZIP” if StateCode exists */
&amp; IF(
    NOT( ISBLANK( TEXT( Prospect_2__r.ESC_NBC_Address__StateCode__s ) ) ),
    &quot;, &quot;
      &amp; TEXT( Prospect_2__r.ESC_NBC_Address__StateCode__s )
      &amp; &quot; &quot;
      &amp; Prospect_2__r.ESC_NBC_Address__PostalCode__s,
    &quot;&quot;
)</formula>
    <label>Prospect 2 Address</label>
    <type>Text</type>
</CustomField>