force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Prospect_2_Email__c</fullName>
    <formula>Prospect_2__r.ESC_NBC_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect 2 Email</label>
    <type>Text</type>
</CustomField>