force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_2_Name__c</fullName>
    <formula>Prospect_2__r.ESC_NBC_First_Name__c +&apos; &apos;+ Prospect_2__r.ESC_NBC_Last_Name__c</formula>
    <label>Prospect 2 Name</label>
    <type>Text</type>
</CustomField>