force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_2_Owner__c.field-meta.xml
<CustomField>
    <fullName>Prospect_2_Owner__c</fullName>
    <formula>Prospect_2__r.Owner:User.FirstName +&apos; &apos;+ Prospect_2__r.Owner:User.LastName</formula>
    <label>Prospect 2 Owner</label>
    <type>Text</type>
</CustomField>