force-app/main/default/objects/Duplicate_Prospect__c/fields/Prospect_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Prospect_2_Phone__c</fullName>
    <formula>Prospect_2__r.ESC_NBC_Phone__c</formula>
    <label>Prospect 2 Phone</label>
    <type>Text</type>
</CustomField>