force-app/main/default/objects/Duplicate_Prospect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prospect_1__c</columns>
    <columns>Prospect_1_Email__c</columns>
    <columns>Prospect_1_Phone__c</columns>
    <columns>Match_Type__c</columns>
    <columns>Prospect_2__c</columns>
    <columns>Prospect_2_Email__c</columns>
    <columns>Prospect_2_Name__c</columns>
    <columns>Prospect_2_Phone__c</columns>
    <columns>Is_Reciprocal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Reciprocal__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>